p2ws_package/Devpp2ws-Package/objects/In_flight_Upgrade_Seat_Master__mdt.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount of money in THB</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROP_Award_Code__c</fullName>
        <label>ROP Award Code</label>
        <referenceTo>ROP_Award_Code__mdt</referenceTo>
        <relationshipLabel>In-flight Upgrade Seat Master</relationshipLabel>
        <relationshipName>In_flight_Upgrade_Seat_Master</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Upgrade_From_Class__c</fullName>
        <label>Upgrade From Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_To_Class__c</fullName>
        <label>Upgrade To Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>In-flight Upgrade Seat Master</label>
    <pluralLabel>In-flight Upgrade Seat Master</pluralLabel>
</CustomObject>